8327637: [lworld] runtime/valhalla/inlinetypes/PreloadCircularityTest.java fails with --enable-preview